// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Booking form / BookingPassenger Base 1`] = `
<div
  className="rs"
>
  <section
    className="booking-passenger "
  >
    <h1
      className="booking-passenger__title"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 "
        data-icon="user"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       Passager n°
      1
       
    </h1>
    <div
      className="booking-passenger__spec"
    >
      <p
        className="booking-passenger__age"
      >
        Âge
      </p>
      <p
        className="booking-passenger__fare-profile"
      >
        Profil tarifaire
      </p>
    </div>
  </section>
</div>
`;

exports[`Storyshots Booking form / BookingPassenger Name Story 1`] = `
<div
  className="rs"
>
  <section
    className="booking-passenger "
  >
    <h1
      className="booking-passenger__title"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 "
        data-icon="user"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       Passager n°
      1
       
      <span
        className="booking-passenger__name"
      >
        — 
        Jean Bon
      </span>
    </h1>
    <div
      className="booking-passenger__spec"
    >
      <p
        className="booking-passenger__age"
      >
        Âge
      </p>
      <p
        className="booking-passenger__fare-profile"
      >
        Profil tarifaire
      </p>
    </div>
  </section>
</div>
`;
